# CI_CD_Pilot

./: .gitignore  .gitlab-ci.yml  CI_CD_Pilot.cpp  CI_CD_Pilot.slnx  CI_CD_Pilot.vcxproj  CI_CD_Pilot.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  TestFile.cpp  TestFile.hpp
.github/workflows/: ci-cd.yml
.ssh/: id_ed25519  id_ed25519.pub  Пример создания ключей.txt
tests/: test_main.cpp
